force-app/main/default/objects/Student__c/fields/Admission_Status__c.field-meta.xml
<CustomField>
    <fullName>Admission_Status__c</fullName>
    <label>Admission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>