force-app/main/default/objects/Student__c/fields/Course_Interested__c.field-meta.xml
<CustomField>
    <fullName>Course_Interested__c</fullName>
    <label>Course Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>B.Sc</fullName>
            </value>
            <value>
                <fullName>M.Sc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>