force-app/main/default/objects/Student__c/fields/Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fee_Balance__c</fullName>
    <formula>Total_Fee__c - Fee_Paid__c - Scholarship_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>