force-app/main/default/objects/Student__c/fields/Parent_Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Name__c</fullName>
    <label>Parent/Guardian Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>