force-app/main/default/objects/Student__c/fields/Previous_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Previous_Qualification__c</fullName>
    <label>Previous Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>12th / Intermediate</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>