force-app/main/default/objects/Student__c/fields/Scholarship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Amount__c</fullName>
    <label>Scholarship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>