force-app/main/default/objects/Student__c/fields/Scholarship_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Eligible</label>
    <type>Checkbox</type>
</CustomField>