force-app/main/default/objects/Student__c/fields/Year_of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Passing__c</fullName>
    <label>Year of Passing</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>