force-app/main/default/objects/Student__c/validationRules/Fee_Paid_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Paid_Validation</fullName>
    <active>true</active>
    <description>Fee Paid cannot exceed Total Fee</description>
    <errorConditionFormula>Fee_Paid__c &gt; Total_Fee__c</errorConditionFormula>
    <errorDisplayField>Fee_Paid__c</errorDisplayField>
    <errorMessage>Fee Paid cannot be more than Total Fee</errorMessage>
</ValidationRule>