force-app/main/default/objects/Student__c/validationRules/Percentage_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_Limit</fullName>
    <active>true</active>
    <description>Ensures percentage is ≤ 100</description>
    <errorConditionFormula>Percentage__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Percentage__c</errorDisplayField>
    <errorMessage>Percentage cannot be more than 100</errorMessage>
</ValidationRule>