force-app/main/default/objects/Student__c/validationRules/Phone_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Phone_Number__c) &lt;&gt; 10</errorConditionFormula>
    <errorMessage>Phone number must be 10 digits</errorMessage>
</ValidationRule>