force-app/main/default/objects/Student__c/validationRules/Year_Of_Passing_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Of_Passing_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>Year_of_Passing__c &gt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>Year_of_Passing__c</errorDisplayField>
    <errorMessage>Year of Passing cannot be in the future</errorMessage>
</ValidationRule>